Pom aanpassen in EurekaService

--- a/w5_EurekaService/pom.xml
+++ b/w5_EurekaService/pom.xml
@@ -45,6 +45,7 @@
 	</dependencyManagement>
 
 	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
