--- a/assignment2-rest/src/main/resources/application.yml
+++ b/assignment2-rest/src/main/resources/application.yml
@@ -1,3 +1,9 @@
-spring:
-  application:
-    name: weather-rest
+server:
+  port: 0
+    
+eureka:
+  instance:
+    leaseRenewalIntervalInSeconds: 10
+    instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+  client:
+    registryFetchIntervalSeconds: 5 
