--- a/assignment2-rest/src/main/resources/bootstrap.yml
+++ b/assignment2-rest/src/main/resources/bootstrap.yml
@@ -1,9 +1,3 @@
-server:
-  port: 0
-    
-eureka:
-  instance:
-    leaseRenewalIntervalInSeconds: 10
-    instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
-  client:
-    registryFetchIntervalSeconds: 5 
+spring:
+  application:
+    name: weather-rest
